Update index.html hamburger icon

--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
     <nav>
         <img src="images/SCLogo.png" alt="CAR Parts Logo" class="logo" loading="lazy">
         <div class="hamburger">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </div>
+        <i class="fas fa-bars"></i> <!-- Font Awesome icon -->
+    </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="https://wa.me/27835190624">Contact Us</a>
