--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
 
 <script>
     // Hamburger menu functionality
+document.addEventListener("DOMContentLoaded", () => {
     const hamburger = document.querySelector(".hamburger");
     const navLinks = document.querySelector(".nav-links");
 
