Inserted the head tag

--- a/tc.html
+++ b/tc.html
@@ -33,6 +33,7 @@
         <div class="terms-content">
             <!-- Introduction Section -->
             <section class="terms-section">
+                <h1>Terms & Conditions</h1>
                 <h2 class="terms-title">1. Introduction</h2>
                 <p>Welcome to Spares Capital. These terms and conditions outline the rules and regulations for the use of our website and services. By accessing this website, you agree to comply with these terms. If you disagree with any part of these terms, please do not use our website.</p>
             </section>
