<h1>About Spares Capital</h1>

--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
         <h1>About Spares Capital</h1>
         
         <section class="about-section">
+            <h1>About Spares Capital</h1>
             <h2 class="about-title">Our Story</h2>
             <div class="about-content">
                 <p>Founded in 2023, Spares Capital began as a small family-owned business with a passion for automotive excellence. What started as a local parts supplier has grown into a trusted national resource for quality vehicle components.</p>
