Spares Capital In the main container

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     </nav>
 
     <main class="about-container">
-        <h1>About Spares Capital</h1>
+        <h1>Spares Capital</h1>
         
         <section class="about-section">
             <h1>About Spares Capital</h1>
