Spares Capital In the main container

--- a/tc.html
+++ b/tc.html
@@ -29,7 +29,7 @@
 
     <!-- Main Content -->
     <main class="terms-container">
-        <h1>Terms & Conditions</h1>
+        <h1>Spares Capital</h1>
         <div class="terms-content">
             <!-- Introduction Section -->
             <section class="terms-section">
