--- a/about.html
+++ b/about.html
@@ -71,17 +71,17 @@
             <div class="team-grid">
                 <div class="team-card">
                     <img src="images/team1.jpg" alt="CEO" loading="lazy">
-                    <h3>John Doe</h3>
+                    <h3>Nyasha Matundu</h3>
                     <p>Founder & CEO</p>
                 </div>
                 <div class="team-card">
                     <img src="images/team2.jpg" alt="Operations Manager" loading="lazy">
-                    <h3>Jane Smith</h3>
+                    <h3>Ian</h3>
                     <p>Operations Manager</p>
                 </div>
                 <div class="team-card">
                     <img src="images/team3.jpg" alt="Technical Specialist" loading="lazy">
-                    <h3>Mike Johnson</h3>
+                    <h3>Owen Chikura</h3>
                     <p>Technical Specialist</p>
                 </div>
             </div>
