--- a/about.html
+++ b/about.html
@@ -93,9 +93,16 @@
         <div class="container">
             <p>&copy; <span id="year"></span> Spares Capital. All rights reserved.</p>
             <ul class="dtr-social-list">
-                <li><a href="tc.html">Terms & Conditions</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="mailto:support@sparescapital.com">Contact Support</a></li>
+                
+            <li><a href="tc.html">Terms & Conditions</a></li>
+                 <li><a href="about.html">About Us</a></li>
+            <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://wa.me/27835190624" target="_blank"><i class="fab fa-whatsapp"></i></a></li
+            <li><a href="mailto:support@sparescapital.com">Contact Support</a></li>
+                
+ 
             </ul>
         </div>
     </footer>
