--- a/tc.html
+++ b/tc.html
@@ -109,15 +109,16 @@
         </div>
     </main>
 
-    <!-- Footer -->
+  
     <footer id="dtr-footer">
         <div class="container">
             <p>&copy; <span id="year"></span> Spares Capital. All rights reserved.</p>
             <ul class="dtr-social-list">
-                <li><a href="tc.html">Terms & Conditions</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="mailto:support@sparescapital.com">Contact Support</a></li>
+                <li><a href="https://www.facebook.com/people/Spares-Capital/61573079162739" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
+                <li><a href="https://www.x.com/sparescapital" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
+                <li><a href="https://www.instagram.com/SparesCapital" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
             </ul>
+            <p>Contact us: <a href="mailto:support@sparescapital.com">support@sparescapital.com</a> | +276 7271 6896</p>
         </div>
     </footer>
 
