Updated footer socials

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <p>&copy; <span id="year"></span> Spares Capital. All rights reserved.</p>
             <ul class="dtr-social-list">
                 <li><a href="https://www.facebook.com/people/Spares-Capital/61573079162739" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
-                <li><a href="https://www.twitter.com/SparesCapita" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
+                <li><a href="https://www.x.com/sparescapital" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
                 <li><a href="https://www.instagram.com/SparesCapital" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
             </ul>
             <p>Contact us: <a href="mailto:support@sparescapital.com">support@sparescapital.com</a> | +276 7271 6896</p>
