Upadated Our Service Section
<p class="section-subtitle">
    No inventory, no markups—just honest pricing and guaranteed quality. At Spares Capital, we streamline the supply chain to deliver genuine parts directly from trusted suppliers to your doorstep. Our commitment to transparency, efficiency, and customer satisfaction ensures you get the best value without compromising on quality.
</p>

--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
     <section class="services-section">
         <div class="section-header">
             <h2 class="section-title">Our Services</h2>
-            <p class="section-subtitle">No inventory, no markups—just honest pricing and guaranteed quality</p>
+            <p class="section-subtitle"><p class="section-subtitle">
+    No inventory, no markups—just honest pricing and guaranteed quality. At Spares Capital, we streamline the supply chain to deliver genuine parts directly from trusted suppliers to your doorstep. Our commitment to transparency, efficiency, and customer satisfaction ensures you get the best value without compromising on quality.
+</p></p>
         </div>
 
         <div class="service-grid">
