updated the services section

--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
         <div class="section-header">
             <h2 class="section-title">Our Services</h2>
             <p class="section-subtitle"><p class="section-subtitle">
-    No inventory, no markups—just honest pricing and guaranteed quality. At Spares Capital, we streamline the supply chain to deliver genuine parts directly from trusted suppliers to your doorstep. Our commitment to transparency, efficiency, and customer satisfaction ensures you get the best value without compromising on quality.
-</p></p>
+    At Spares Capital, we go beyond just supplying parts—we deliver a 5-star experience. From personalized consultations with our automotive experts to guaranteed quality assurance on every component, we ensure you get the right part for your needs.
+                Enjoy expedited, trackable delivery with options for same-day or next-day service, backed by comprehensive after-sales support, including hassle-free returns assistance. 
+                As a valued client, you’ll also gain access to exclusive membership benefits, such as loyalty rewards, early access to promotions, and eco-friendly options. Our commitment to transparency, efficiency, and exceptional service ensures you receive the best value and peace of mind with every purchase.
+</p>
         </div>
 
         <div class="service-grid">
