Updated the terms and conditions tc.html

--- a/tc.html
+++ b/tc.html
@@ -34,82 +34,173 @@
             <!-- Introduction Section -->
             <section class="terms-section">
                 <h1>Terms & Conditions</h1>
-                <h2 class="terms-title">1. Introduction</h2>
-                <p>Welcome to Spares Capital. These terms and conditions outline the rules and regulations for the use of our website and services. By accessing this website, you agree to comply with these terms. If you disagree with any part of these terms, please do not use our website.</p>
+                <h2 class="terms-title">Welcome to Spares Capital</h2>
+                <p>These Terms and Conditions ("<strong>Terms</strong>") govern your use of our website (<a href="https://sparescapital.github.io/sparescapital/">https://sparescapital.github.io/sparescapital/</a>) and the purchase of products or services from Spares Capital ("<strong>we</strong>," "<strong>us</strong>," or "<strong>our</strong>"). By accessing our website or placing an order, you agree to these Terms. If you disagree, refrain from using our website or services.</p>
             </section>
 
-            <!-- Intellectual Property Section -->
+            <!-- Definitions Section -->
             <section class="terms-section">
-                <h2 class="terms-title">2. Intellectual Property</h2>
-                <p>Unless otherwise stated, Spares Capital and/or its licensors own the intellectual property rights for all material on this website. All intellectual property rights are reserved. You may access this material for personal use, subject to the restrictions set in these terms and conditions.</p>
-            </section>
-
-            <!-- User Responsibilities Section -->
-            <section class="terms-section">
-                <h2 class="terms-title">3. User Responsibilities</h2>
-                <p>By using our services, you agree not to:</p>
+                <h2 class="terms-title">1. Definitions</h2>
                 <ul>
-                    <li>Misuse any vehicle part information provided on this website.</li>
-                    <li>Resell parts without prior authorization from Spares Capital.</li>
-                    <li>Provide false or misleading vehicle details when placing an order.</li>
+                    <li><strong>"Customer" or "You":</strong> Any individual or entity purchasing products/services from Spares Capital.</li>
+                    <li><strong>"Products":</strong> Spare parts for vehicles and machinery, including engine, suspension, transmission, sensor, injector, and body kit parts.</li>
+                    <li><strong>"Order":</strong> A request for products submitted via phone, WhatsApp, or our website form.</li>
+                    <li><strong>"Website":</strong> <a href="https://sparescapital.github.io/sparescapital/">https://sparescapital.github.io/sparescapital/</a></li>
+                    <li><strong>"Service":</strong> Supply of products, consultations, delivery, and support.</li>
                 </ul>
             </section>
 
-            <!-- Payment Terms Section -->
+            <!-- Ordering Process Section -->
             <section class="terms-section">
-                <h2 class="terms-title">4. Payment Terms</h2>
-                <p><strong>4.1 Upfront Payments:</strong> Clients are required to pay a non-refundable deposit of <mark>50%</mark> of the total order value before work commences. The remaining balance must be settled prior to shipment.</p>
-                <p><strong>4.2 Payment Default:</strong> Failure to complete payment within 7 days of invoice issuance may result in:</p>
+                <h2 class="terms-title">2. Ordering Process</h2>
+                <h3>2.1 Placing an Order</h3>
+                <p>Orders may be submitted via:</p>
                 <ul>
-                    <li>Order cancellation.</li>
-                    <li>Forfeiture of the deposit.</li>
-                    <li>Storage fees of 2% per day of the order value.</li>
+                    <li><strong>Phone:</strong> [Insert Phone Number]</li>
+                    <li><strong>WhatsApp:</strong> [Insert WhatsApp Link]</li>
+                    <li><strong>Website Form:</strong> [Insert Form Link]</li>
+                </ul>
+                <p>All orders are subject to availability and our acceptance.</p>
+
+                <h3>2.2 Order Confirmation</h3>
+                <ul>
+                    <li>You will receive confirmation via WhatsApp/email with order details and delivery timelines.</li>
+                    <li>We reserve the right to cancel orders due to unavailability, pricing errors, or suspicious activity.</li>
+                </ul>
+
+                <h3>2.3 Payment</h3>
+                <ul>
+                    <li><strong>Accepted Methods:</strong> Bank transfer, digital wallets, or cash on delivery (where available)</li>
+                    <li>Full payment required before dispatch unless otherwise agreed</li>
+                    <li>Prices in <strong>ZAR (South African Rand)</strong> including VAT where applicable</li>
+                </ul>
+
+                <h3>2.4 Cancellation</h3>
+                <ul>
+                    <li>Cancel orders before dispatch via WhatsApp/phone</li>
+                    <li>Post-dispatch cancellations may incur return shipping fees</li>
                 </ul>
             </section>
 
-            <!-- Delivery & Risk Management Section -->
+            <!-- Delivery Section -->
             <section class="terms-section">
-                <h2 class="terms-title">5. Delivery & Risk Management</h2>
-                <p><strong>5.1 Shipping Terms:</strong></p>
+                <h2 class="terms-title">3. Delivery</h2>
+                <h3>3.1 Delivery Options</h3>
                 <ul>
-                    <li>All delivery timelines are estimates only.</li>
-                    <li>Risk transfers to the client upon dispatch of goods.</li>
-                    <li>Customs and duties are the responsibility of the client.</li>
+                    <li><strong>Same-Day Pickup:</strong> Available in Tshwane for orders placed before [Insert Time]</li>
+                    <li><strong>Tracked Courier:</strong> Nationwide delivery with estimated timelines</li>
                 </ul>
-                <p><strong>5.2 Force Majeure:</strong> Spares Capital is not liable for delays caused by:</p>
+
+                <h3>3.2 Costs & Delays</h3>
                 <ul>
-                    <li>Supplier failures.</li>
-                    <li>Customs hold-ups.</li>
-                    <li>Acts of nature or other unforeseen events.</li>
+                    <li>Delivery fees vary by location/order size</li>
+                    <li>Not liable for delays due to weather or courier issues</li>
+                    <li>Redelivery fees for incorrect addresses/unavailability</li>
                 </ul>
             </section>
 
-            <!-- Data Protection Section -->
+            <!-- Returns & Refunds Section -->
             <section class="terms-section">
-                <h2 class="terms-title">6. Data Protection</h2>
-                <p><strong>6.1 Information Handling:</strong></p>
+                <h2 class="terms-title">4. Returns & Refunds</h2>
+                <h3>4.1 Eligibility</h3>
                 <ul>
-                    <li>Client data is used solely for order fulfillment.</li>
-                    <li>All payment processing is encrypted for security.</li>
-                    <li>Spares Capital reserves the right to verify client identity.</li>
+                    <li>Returns accepted within 7 days for defects/incorrect items</li>
+                    <li>Contact us via WhatsApp/phone to initiate returns</li>
                 </ul>
-                <p><strong>6.2 Record Keeping:</strong> Transaction records are retained for:</p>
+
+                <h3>4.2 Process</h3>
                 <ul>
-                    <li>7 years for tax compliance purposes.</li>
-                    <li>Warranty periods.</li>
-                    <li>Dispute resolution.</li>
+                    <li>Provide proof of purchase and photos if applicable</li>
+                    <li>Return costs covered by us for defects/errors</li>
+                </ul>
+
+                <h3>4.3 Refunds</h3>
+                <ul>
+                    <li>Processed within 14 days of receipt</li>
+                    <li>Issued to original payment method or store credit</li>
+                </ul>
+
+                <h3>4.4 Non-Returnable Items</h3>
+                <ul>
+                    <li>Custom/special-order products</li>
+                    <li>Items damaged via misuse/improper installation</li>
                 </ul>
             </section>
 
-            <!-- Governing Law Section -->
+            <!-- Warranties Section -->
             <section class="terms-section">
-                <h2 class="terms-title">7. Governing Law</h2>
-                <p>These terms and conditions are governed by and construed in accordance with the laws of South Africa. Any disputes relating to these terms will be subject to the exclusive jurisdiction of the courts of South Africa.</p>
+                <h2 class="terms-title">5. Warranties</h2>
+                <h3>5.1 Limited Warranty</h3>
+                <ul>
+                    <li>Covers manufacturing defects for [Insert Duration]</li>
+                    <li>Excludes normal wear and tear/misuse</li>
+                </ul>
+
+                <h3>5.2 Claims</h3>
+                <ul>
+                    <li>Submit claims via WhatsApp/phone with proof</li>
+                    <li>Return may be required for inspection</li>
+                </ul>
+            </section>
+
+            <!-- Liability Section -->
+            <section class="terms-section">
+                <h2 class="terms-title">6. Liability</h2>
+                <h3>6.1 Limitation</h3>
+                <ul>
+                    <li>Not liable for indirect/consequential damages</li>
+                    <li>Liability capped at purchase amount</li>
+                </ul>
+
+                <h3>6.2 Indemnification</h3>
+                <p>You agree to indemnify us against claims from product misuse or Terms violations.</p>
+            </section>
+
+            <!-- Privacy Section -->
+            <section class="terms-section">
+                <h2 class="terms-title">7. Privacy</h2>
+                <h3>7.1 Data Collection</h3>
+                <ul>
+                    <li>Collect personal data for order processing</li>
+                </ul>
+
+                <h3>7.2 Use & Protection</h3>
+                <ul>
+                    <li>Data used for fulfillment and support</li>
+                    <li>Shared only with essential third parties</li>
+                </ul>
+            </section>
+
+            <!-- Dispute Resolution Section -->
+            <section class="terms-section">
+                <h2 class="terms-title">8. Dispute Resolution</h2>
+                <ol>
+                    <li><strong>Informal Resolution:</strong> Contact us first</li>
+                    <li><strong>Arbitration:</strong> AFSA binding arbitration in Pretoria</li>
+                    <li><strong>Governing Law:</strong> South African law applies</li>
+                </ol>
+            </section>
+
+            <!-- General Section -->
+            <section class="terms-section">
+                <h2 class="terms-title">9. General</h2>
+                <ul>
+                    <li><strong>Amendments:</strong> Posted on website</li>
+                    <li><strong>Severability:</strong> Invalid clauses don't affect remainder</li>
+                    <li><strong>Contact:</strong> WhatsApp/phone/website form</li>
+                </ul>
+            </section>
+
+            <!-- Final Section -->
+            <section class="terms-section">
+                <h2 class="terms-title">10. Accessibility</h2>
+                <p>Available at <a href="https://sparescapital.github.io/sparescapital/tc.html">https://sparescapital.github.io/sparescapital/tc.html</a>. Review regularly for updates.</p>
+                <p><strong>By using our website or services, you confirm acceptance of these Terms.</strong></p>
             </section>
         </div>
     </main>
 
-  
+    <!-- Footer -->
     <footer id="dtr-footer">
         <div class="container">
             <p>&copy; <span id="year"></span> Spares Capital. All rights reserved.</p>
