Added the google tag

--- a/tc.html
+++ b/tc.html
@@ -9,7 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-</head>
+</head><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WMKKS9PTVF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WMKKS9PTVF');
+</script>
+
 <body class="terms-page">
     <!-- Navigation Bar -->
     <nav>
@@ -34,8 +43,8 @@
             <!-- Terms Content -->
             <section class="terms-section">
                 <h1>Terms & Conditions</h1>
-                <p><strong>Effective Date:</strong> [Insert Date]</p>
-                <p>Welcome to Spares Capital. These Terms and Conditions (“Terms”) govern your use of our website (<a href="https://sparescapital.github.io/sparescapital/">https://sparescapital.github.io/sparescapital/</a>) and the purchase of any products or services from Spares Capital (“we,” “us,” or “our”). By accessing our website or placing an order, you agree to be bound by these Terms. If you do not agree, please refrain from using our website or services.</p>
+                <p><strong>Effective Date:</strong> [01/03/2025]</p>
+                <p>Welcome to Spares Capital. These Terms and Conditions (“Terms”) govern your use of our website (<a href="www.sparescapital.co.za">www.sparescapital.co.za/</a>) and the purchase of any products or services from Spares Capital (“we,” “us,” or “our”). By accessing our website or placing an order, you agree to be bound by these Terms. If you do not agree, please refrain from using our website or services.</p>
             </section>
 
             <!-- 1. Definitions -->
@@ -46,7 +55,7 @@
                     <li><strong>“Customer” or “You”:</strong> Any individual or entity purchasing products or services from Spares Capital.</li>
                     <li><strong>“Products”:</strong> Spare parts for cars, trucks, and machinery, including but not limited to engine parts, suspension parts, transmission parts, sensor parts, injector parts, and body kit parts.</li>
                     <li><strong>“Order”:</strong> A request for products submitted via phone, WhatsApp, or our website form.</li>
-                    <li><strong>“Website”:</strong> <a href="https://sparescapital.co.za">https://sparescapital.co.za</a></li>
+                    <li><strong>“Website”:</strong> <a href="www.sparescapital.co.za">www.sparescapital.co.za</a></li>
                     <li><strong>“Service”:</strong> The supply of products and related services, including consultations, delivery, and support.</li>
                 </ul>
             </section>
@@ -222,7 +231,7 @@
             <!-- 10. Accessibility -->
             <section class="terms-section">
                 <h2 class="terms-title">10. Accessibility</h2>
-                <p>These Terms are accessible at <a href="https://sparescapital.co.za/tc.html">https://sparescapital.co.za/tc.html</a>. We encourage regular review for updates.</p>
+                <p>These Terms are accessible at <a href="www.sparescapital.co.za/tc.html">www.sparescapital.co.za/tc.html</a>. We encourage regular review for updates.</p>
                 <p>By using our website or ordering from us, you confirm that you have read, understood, and agree to these Terms and Conditions. Thank you for choosing Spares Capital.</p>
             </section>
         </div>
