--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
     <link rel="preload" href="images/HeroSection.jpg" as="image">
     <link rel="preload" href="images/SCLogo.png" as="image">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
+</head><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WMKKS9PTVF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WMKKS9PTVF');
+</script>
 <body>
     <div class="loading-overlay">
         <div class="loading-spinner"></div>
