--- a/tc.html
+++ b/tc.html
@@ -55,7 +55,7 @@
                     <li><strong>“Customer” or “You”:</strong> Any individual or entity purchasing products or services from Spares Capital.</li>
                     <li><strong>“Products”:</strong> Spare parts for cars, trucks, and machinery, including but not limited to engine parts, suspension parts, transmission parts, sensor parts, injector parts, and body kit parts.</li>
                     <li><strong>“Order”:</strong> A request for products submitted via phone, WhatsApp, or our website form.</li>
-                    <li><strong>“Website”:</strong> <a href="href="https://sparescapital.co.za/">sparescapital.co.za</a></li>
+                    <li><strong>“Website”:</strong> <a href="https://sparescapital.co.za/">sparescapital.co.za</a></li>
                     <li><strong>“Service”:</strong> The supply of products and related services, including consultations, delivery, and support.</li>
                 </ul>
             </section>
@@ -231,7 +231,7 @@
             <!-- 10. Accessibility -->
             <section class="terms-section">
                 <h2 class="terms-title">10. Accessibility</h2>
-                <p>These Terms are accessible at <a href="href="https://sparescapital.co.za/tc.html">sparescapital.co.za/</a>. We encourage regular review for updates.</p>
+                <p>These Terms are accessible at <a href="https://sparescapital.co.za/tc.html">sparescapital.co.za/</a>. We encourage regular review for updates.</p>
                 <p>By using our website or ordering from us, you confirm that you have read, understood, and agree to these Terms and Conditions. Thank you for choosing Spares Capital.</p>
             </section>
         </div>
