Updated the rach us section

--- a/tc.html
+++ b/tc.html
@@ -44,7 +44,7 @@
             <section class="terms-section">
                 <h1>Terms & Conditions</h1>
                 <p><strong>Effective Date:</strong> [01/03/2025]</p>
-                <p>Welcome to Spares Capital. These Terms and Conditions (“Terms”) govern your use of our website (<a href="https://sparescapital.co.za/">sparescapital.co.za/</a>) and the purchase of any products or services from Spares Capital (“we,” “us,” or “our”). By accessing our website or placing an order, you agree to be bound by these Terms. If you do not agree, please refrain from using our website or services.</p>
+                <p>Welcome to Spares Capital. These Terms and Conditions (“Terms”) govern your use of our website (<a href="https://sparescapital.co.za/">sparescapital.co.za</a>) and the purchase of any products or services from Spares Capital (“we,” “us,” or “our”). By accessing our website or placing an order, you agree to be bound by these Terms. If you do not agree, please refrain from using our website or services.</p>
             </section>
 
             <!-- 1. Definitions -->
@@ -220,18 +220,25 @@
                 <p>These Terms represent the full agreement between you and Spares Capital, superseding prior understandings.</p>
 
                 <h3>9.4 Contact Information</h3>
-                <p>Reach us at:</p>
-                <ul>
-                    <li><strong>WhatsApp:</strong> [Insert WhatsApp Link]</li>
-                    <li><strong>Phone:</strong> [Insert Phone Number]</li>
-                    <li><strong>Website Form:</strong> [Insert Form Link]</li>
+<p>Reach us at:</p>
+<ul>
+  <li><strong>WhatsApp:</strong> 
+    <a href="https://wa.me/27835190624?text=I%20want%20to%20place%20an%20order" target="_blank">Order Assistance</a> | 
+    <a href="https://wa.me/27835190624?text=Return%20request%20for%20order%20number" target="_blank">Returns</a>
+  </li>
+  <li><strong>Phone:</strong> +27 83 519 0624 (Business hours: Mon-Fri 8AM-5PM SAT)</li>
+  <li><strong>Form:</strong> 
+    <a href="/contact-form">Online Inquiry Form</a>
+  </li>
+</ul>
+<p class="automation-note">Automated order confirmations & tracking updates sent via WhatsApp.</p>
                 </ul>
             </section>
 
             <!-- 10. Accessibility -->
             <section class="terms-section">
                 <h2 class="terms-title">10. Accessibility</h2>
-                <p>These Terms are accessible at <a href="https://sparescapital.co.za/tc.html">sparescapital.co.za/</a>. We encourage regular review for updates.</p>
+                <p>These Terms are accessible at <a href="https://sparescapital.co.za/tc.html">Spares Capital Terms and Conditions</a>. We encourage regular review for updates.</p>
                 <p>By using our website or ordering from us, you confirm that you have read, understood, and agree to these Terms and Conditions. Thank you for choosing Spares Capital.</p>
             </section>
         </div>
